[gd_scene load_steps=6 format=3 uid="uid://becahrjgy1o5x"]

[ext_resource type="Script" path="res://Player.gd" id="1_mlpya"]
[ext_resource type="Texture2D" uid="uid://06a2ssilkjty" path="res://icon.svg" id="2_jcqve"]
[ext_resource type="AudioStream" uid="uid://7tc7fmbii67p" path="res://Assets/SFX/bfough.mp3" id="3_fujjr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahmev"]
size = Vector2(68, 68)

[sub_resource type="CircleShape2D" id="CircleShape2D_jqn5y"]
radius = 16.0

[node name="Player" type="Node2D"]
script = ExtResource("1_mlpya")

[node name="PlayerBody" type="RigidBody2D" parent="."]
position = Vector2(582, 577)
lock_rotation = true

[node name="Sprite2D" type="Sprite2D" parent="PlayerBody"]
scale = Vector2(0.546875, 0.546875)
texture = ExtResource("2_jcqve")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource("RectangleShape2D_ahmev")

[node name="BombSprite" type="Sprite2D" parent="PlayerBody"]
position = Vector2(-34, 23)
scale = Vector2(0.265625, 0.265625)
texture = ExtResource("2_jcqve")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerBody/BombSprite"]
stream = ExtResource("3_fujjr")

[node name="BombCooldown" type="Timer" parent="PlayerBody"]
one_shot = true

[node name="ExplodeMoveFullSpeed" type="Timer" parent="PlayerBody"]

[node name="Arm" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 582.0
offset_top = 571.0
offset_right = 640.0
offset_bottom = 583.0
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="Arm"]
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm/Area2D"]
position = Vector2(56, 0)
shape = SubResource("CircleShape2D_jqn5y")

[node name="lastpin" type="Sprite2D" parent="."]
modulate = Color(1, 0, 1, 1)
scale = Vector2(0.21875, 0.21875)
texture = ExtResource("2_jcqve")

[connection signal="timeout" from="PlayerBody/BombCooldown" to="." method="_on_bomb_cooldown_timeout"]
[connection signal="body_entered" from="Arm/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Arm/Area2D" to="." method="_on_area_2d_body_exited"]
